mod12/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - highking.tech
      secretName: cncamp-tls
  rules:
    - host: highking.tech
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
